test_regress/t/t_forceable_string_bad.v
// ======================================================================
// This file ONLY is placed under the Creative Commons Public Domain.
// SPDX-FileCopyrightText: 2026 Christian Hecken
// SPDX-License-Identifier: CC0-1.0
// ======================================================================

module t;
  string str  /*verilator forceable*/;
endmodule
